# cap-evolve

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RUN.md  SECURITY.md  benchmarks.json  install.sh  llms.txt  meta.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
core/: README.md  pyproject.toml
core/agent_capo/: __init__.py  __main__.py  adapter.py  check.py  cli.py  harness.py  loop.py  memory.py  rundir.py  specfile.py  splits.py  store.py
core/cap_evolve/: __init__.py  __main__.py  _bootstrap.py  adapter.py  cache.py  check.py  cli.py  dashboard.py  dashboard_launch.py  gate.py  gepa.py  harness.py  loop.py  lr_schedule.py  memory.py  observers.py  observers_mlflow.py  observers_otel.py  pricing.py  rundir.py  selection.py  skillcheck.py  skillopt.py  specfile.py  splits.py  stats.py  store.py  target_profile.py  telemetry.py  tool_surface.py  trials.py  types.py
core/tests/: test_budget_cost.py  test_check_runner_mismatch.py  test_core.py  test_dashboard.py  test_dashboard_launch.py  test_e2e_slice.py  test_empty_seed.py  test_gepa.py  test_manifest.py  test_metrics.py  test_metrics_results.py  test_native_skills.py  test_new_benchmark.py  test_observers.py  test_optimizer_context.py  test_optimizer_error_detail.py  test_orchestration_mode.py  test_per_task_impact.py  test_regression_gate.py  test_resume.py  test_skillopt.py  test_splits_input.py  test_stop_hook_agent_mode.py  test_store_memory.py  test_target_profile.py  test_target_profile_metadata.py  test_target_reader_render.py  test_target_reader_wiring.py  test_telemetry.py  test_trials.py  test_w1_engine.py
dashboard/backend/: README.md  pyproject.toml
dashboard/backend/capevolve_dashboard/: __init__.py  _bootstrap.py  app.py  asgi.py  compare.py  custom_view.py  files.py  gitlog.py  memory.py  runs.py  server.py  stream.py  trajectories.py
dashboard/backend/tests/: conftest.py  test_app.py  test_compare.py  test_custom_view.py  test_files_git.py  test_memory_api.py  test_runs.py  test_server.py  test_stream.py  test_trajectories.py
docs/: ADAPTER_CONTRACT.md  ADAPTER_TEMPLATES.md  AGENT_ORCHESTRATION.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  CODE_REVIEW.md  COMPARISON.md  EXTENDING.md  GETTING_STARTED.md  HONEST_EVAL.md  INSTALL.md  OBSERVABILITY.md  OPTIMIZATION_EXAMPLES.md  OPTIMIZE_YOUR_OWN.md  REPRODUCE_skillsbench.md  REPRODUCE_tau2.md  RESULTS.md  ROADMAP.md  TROUBLESHOOTING.md  demo.tape  (+2 more)
(+585 files in other folders)
