[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-capo-core"
version = "0.1.0"
description = "Tiny stdlib-only honest-evaluation substrate for the agent-capo skills library."
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# Zero hard runtime dependencies — pure stdlib by design.
dependencies = []

[project.optional-dependencies]
judge = []        # llm-judge evaluator extras (filled when that evaluator lands)
dashboard = []    # static-HTML / Flask dashboard extras
dev = ["pytest>=7"]

[project.scripts]
acapo = "agent_capo.cli:main"

[tool.setuptools]
packages = ["agent_capo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
