[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cap-evolve-core"
version = "0.1.0"
description = "Tiny stdlib-only honest-evaluation substrate for the cap-evolve skills library."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
# Zero hard runtime dependencies — pure stdlib by design.
dependencies = []

[project.optional-dependencies]
judge = []        # llm-judge evaluator extras (filled when that evaluator lands)
dashboard = []    # static-HTML / Flask dashboard extras
dev = ["pytest>=7"]

[project.scripts]
cap-evolve = "cap_evolve.cli:main"

[project.urls]
Homepage      = "https://skillberry-ai.github.io/cap-evolve/"
Documentation = "https://skillberry-ai.github.io/cap-evolve/"
Repository    = "https://github.com/skillberry-ai/cap-evolve"
Issues        = "https://github.com/skillberry-ai/cap-evolve/issues"

[tool.setuptools]
packages = ["cap_evolve"]

[tool.pytest.ini_options]
testpaths = ["tests"]
