[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "capevolve-dashboard"
version = "0.1.0"
description = "Live FastAPI dashboard backend for cap-evolve runs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.110", "uvicorn>=0.27", "cap-evolve-core"]

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.27"]

[project.scripts]
cap-evolve-dashboard = "capevolve_dashboard.server:main"

[tool.setuptools]
packages = ["capevolve_dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
